--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,13 @@ body {
   justify-content: center;
   width: 100%;
 }
+
+@media screen and (min-width: 1400px) {
+  body {
+    margin: 100px 0;
+  }
+  .App {
+    display: flex;
+    flex-direction: row;
+  }
+}
