--- a/frontend/src/ui/Informations/styles.css
+++ b/frontend/src/ui/Informations/styles.css
@@ -1,8 +1,9 @@
 .information-container {
   background-color: #00adb5;
-  width: 400;
   padding: 25px;
   border-radius: 4px;
+  margin: 15px 0;
+  width: 330px;
 }
 
 h1.city-name {
@@ -19,13 +20,16 @@ h3.state-country {
 
 .card-container {
   margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card {
   width: 250px;
   height: 60px;
   background-color: #eeeeee;
-  margin: 25px 0;
+  margin: 15px 0;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -41,4 +45,86 @@ h3.state-country {
   align-self: center;
   margin-top: 5px;
   color: #00adb5;
+}
+
+@media screen and (min-width: 480px) {
+  .information-container {
+    width: 450px;
+  }
+
+  h1.city-name {
+    font-size: 2.4rem;
+  }
+
+  h3.state-country {
+    font-size: 1.1rem;
+  }
+
+  .card {
+    width: 90%;
+    height: 80px;
+  }
+
+  .card-title {
+    font-size: 1rem;
+  }
+
+  .card-info {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .information-container {
+    width: 700px;
+  }
+
+  h1.city-name {
+    font-size: 2.8rem;
+  }
+
+  h3.state-country {
+    font-size: 1.4rem;
+  }
+
+  .card {
+    width: 90%;
+    height: 100px;
+  }
+
+  .card-title {
+    font-size: 1.2rem;
+  }
+
+  .card-info {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .information-container {
+    width: 500px;
+    margin: 20px;
+  }
+
+  h1.city-name {
+    font-size: 2.8rem;
+  }
+
+  h3.state-country {
+    font-size: 1.4rem;
+  }
+
+  .card {
+    width: 90%;
+    height: 100px;
+  }
+
+  .card-title {
+    font-size: 1.2rem;
+  }
+
+  .card-info {
+    font-size: 1.5rem;
+  }
 }
