--- a/frontend/src/ui/LeftPanel/styles.css
+++ b/frontend/src/ui/LeftPanel/styles.css
@@ -4,3 +4,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (min-width: 1200px) {
+  .container {
+    margin: 0 50px;
+  }
+}
