--- a/frontend/src/ui/SearchBar/styles.css
+++ b/frontend/src/ui/SearchBar/styles.css
@@ -15,3 +15,17 @@ input[type="text"],
 textarea {
   background-color: #eeeeee;
 }
+
+@media screen and (min-width: 480px) {
+  input[type="text"] {
+    width: 300px;
+    height: 45px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  input[type="text"] {
+    width: 400px;
+    height: 50px;
+  }
+}
