--- a/frontend/src/ui/SearchBar/styles.css
+++ b/frontend/src/ui/SearchBar/styles.css
@@ -1,3 +1,12 @@
+.search-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.search-input label {
+  font-size: 0.8rem;
+}
+
 input[type="text"] {
   outline: none !important;
   border: 2px solid #aad8d3;
